Closed Bug 1602457 Opened 4 years ago Closed 4 years ago

Fix typo in needsStaticStackAlignment

Categories

(Core :: JavaScript: WebAssembly, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla73
Tracking Status
firefox73 --- fixed

People

(Reporter: bbouvier, Assigned: bbouvier)

Details

Attachments

(1 file)

And the laureate for the best typo found in 2019 that's been around for years is...

We could even go one step further and just plain remove needsStaticStackAlignment, and use needsOverrecursedCheck instead in the one caller. This boolean (needs static check alignment) was more useful when we had SIMD, since the use of aligned SSE moves required the stack to be aligned too.

Pushed by bbouvier@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5627801634c7
Fix return value in MIRGenerator::needsStaticStackAlignment; r=lth
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: