Bug 1602457: Fix return value in MIRGenerator::needsStaticStackAlignment; r=lth

Differential Revision: https://phabricator.services.mozilla.com/D56365

--HG--
extra : moz-landing-system : lando